app/assets/tailwind/application.css
@import "tailwindcss";

.button {
  @apply inline-block align-middle p-2 bg-gray-200 border-1 border-gray-400 rounded-lg shadow-md shadow-gray-500 text-left cursor-pointer;
}

form.button_to {
  @apply m-0 border-0 p-0;
}

.flex-col > form.button_to .button {
  @apply w-full;
}

.button-default {
  @apply font-medium text-black hover:text-white hover:bg-blue-600;
}

.button-red {
  @apply font-medium text-red-600 hover:text-white hover:bg-red-600;
}

.button-green {
  @apply font-medium text-green-700 hover:text-white hover:bg-green-700;
}

.input-field {
  @apply block shadow-sm rounded-md border px-3 py-2 mt-2 w-full
         border-gray-400 focus:outline-blue-600;
}

.trix-content {
  @apply block shadow-sm rounded-md border px-3 py-2 mt-2
         w-full h-96
         border-gray-400 focus:border-2 focus:border-blue-600;
}

.custom-input-field {
  @apply shadow-sm rounded-md border border-gray-400 focus:outline-blue-600;
}

.checkbox {
  @apply inline-block shadow-sm cursor-pointer h-5 w-5;
}

.small-label {
  @apply sm:text-sm sm:font-semibold;
}

.small-input-field {
  @apply block shadow-sm rounded-md border p-1 mt-1 md:text-sm
         border-gray-400 focus:outline-blue-600;
}

.field_with_errors {
  @apply w-full;
}

.field_with_errors .input-field,
.field_with_errors .small-input-field {
  @apply border-red-400 focus:outline-red-600;
}

.pill {
  @apply p-1 px-2 min-w-12 rounded-full text-sm font-bold border border-gray-400 text-gray-500 inline-block;
}
.pill span,
.pill svg {
  @apply inline-block align-middle;
}

#preview .trix-content {
  @apply mt-12 border-none shadow-none print:mt-0;
}

.trix-content {
  @apply print:border-none print:shadow-none;
}

